--- a/myproject/camps/templates/camps/add_camp.html
+++ b/myproject/camps/templates/camps/add_camp.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="max-w-2xl mx-auto py-10">
-    <h2 class="text-3xl font-bold text-indigo-900 mb-6 text-center">กรอกข้อมูลกิจกรรม</h2>
+    <h2 class="text-3xl font-bold text-white mb-6 text-center">กรอกข้อมูลกิจกรรม</h2>
     
     <form id="campForm" method="POST" enctype="multipart/form-data" class="bg-white shadow-md rounded-lg p-6 space-y-6">
         {% csrf_token %}
