--- a/myproject/camps/templates/camps/home.html
+++ b/myproject/camps/templates/camps/home.html
@@ -119,6 +119,11 @@
     </div>
   </div>
 {% endfor %}
+<div class="text-center">
+  <a href="{% url 'profile' %}" class="px-5 py-2 bg-gradient-to-r from-cyan-300 to-yellow-300 text-black font-semibold rounded-full hover:from-[#002437] hover:to-[#005f99] transition-all hover:shadow-lg transform hover:scale-105">
+    สนับสนุนพวกเรา
+  </a>
+</div>
 
 <style>
   #particles-js {
